--- a/client/src/templates/head_common.pug
+++ b/client/src/templates/head_common.pug
@@ -14,11 +14,11 @@ link(href='./assets/1999.css' rel='stylesheet')
 script(src="https://www.google.com/recaptcha/api.js")
 
 //- SEO
-link(rel="canonical" href='https://openstudios.xyz' + page.url.replace('/iframes',''))
+link(rel="canonical" href='https://langenium.com' + page.url.replace('/iframes',''))
 meta(property='og:title' content=title)
 meta(property='og:description' content=description || title )
 meta(property='og:type' content='article')
-meta(property='og:image' content=cover || 'https://openstudios.xyz/assets/images/virtual_office.jpg')
+meta(property='og:image' content=cover || 'https://langenium.com/assets/images/virtual_office.jpg')
 meta(property='og:image:width' content='1024')
 meta(property='og:image:height' content='768')
 
@@ -26,4 +26,4 @@ meta(property='og:image:height' content='768')
 meta(name='twitter:title' content=title)
 meta(name='twitter:card' content='summary_large_image')
 meta(name='twitter:description' content=description || title)
-meta(name='twitter:image' content=cover || 'https://openstudios.xyz/assets/images/virtual_office.jpg')
+meta(name='twitter:image' content=cover || 'https://langenium.com/assets/images/virtual_office.jpg')
