--- a/client/src/web/index.pug
+++ b/client/src/web/index.pug
@@ -8,7 +8,4 @@ priority: "1.0"
 changefreq: daily
 ---
 
-extends ../templates/2023.pug
-
-block append page
-  include ../content/home.pug
+extends ../templates/game_client.pug
