v6 - Adding UI class, airspeed control

--- a/client/src/templates/flight_controls.pug
+++ b/client/src/templates/flight_controls.pug
@@ -3,5 +3,9 @@
         .control {
             max-width: 10vw;
         }
-    .control#airspeed
+
+        svg * {
+            transform-origin: 50% 50% 0;
+        }
+    .control
         include ../assets/flight_controls/Airspeed.svg
