--- a/client/src/templates/flight_controls.pug
+++ b/client/src/templates/flight_controls.pug
@@ -1,11 +1,22 @@
-#flight_controls
-    style.
-        .control {
-            max-width: 10vw;
-        }
+style.
+    #flight_controls{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+    }
+    .control {
+        max-width: 10vw;
+    }
 
-        svg * {
-            transform-origin: 50% 50% 0;
-        }
+    svg * {
+        transform-origin: 50% 50% 0;
+    }
+#flight_controls
     .control
         include ../assets/flight_controls/Airspeed.svg
