v6 - Additional integration of touch controls and disabling for now

--- a/client/src/templates/flight_controls.pug
+++ b/client/src/templates/flight_controls.pug
@@ -23,6 +23,17 @@ style.
     svg * {
         transform-origin: 50% 50% 0;
     }
+
+    .movement-pad {
+        z-index: 2;
+        left: 1vw !important;
+    }
+
+    .rotation-pad {
+        z-index: 2;
+        left: inherit !important;
+        right: 6vw;
+    }
 #flight_controls
     .control
         include ../assets/flight_controls/Airspeed.svg
