--- a/client/src/templates/head_common.pug
+++ b/client/src/templates/head_common.pug
@@ -8,7 +8,7 @@ meta(name='msapplication-TileColor' content='#da532c')
 meta(name='theme-color' content='#000000')
 
 //- CSS
-link(href='./assets/1999.css' rel='stylesheet')
+link(href='./vendor/TouchControls-master/css/touch-pad.css' rel='stylesheet')
 
 //- Captcha
 script(src="https://www.google.com/recaptcha/api.js")
