v6 - Refactoring client code for multiplayer

--- a/client/src/templates/game_client.pug
+++ b/client/src/templates/game_client.pug
@@ -103,7 +103,7 @@ html(lang='en')
                 }
             
             script
-                include ../scripts/scenograph.js
+                include ../scripts/l.js
             script
                 include ../scripts/matrix.js
             script.
