v6 - Adding main menu UI

--- a/client/src/templates/game_client.pug
+++ b/client/src/templates/game_client.pug
@@ -62,6 +62,9 @@ html(lang='en')
                 left: 0;
                 display: block;
             }
+            .tp-dfwv {
+                z-index: 1;
+            }
 
     body(onload="_init( 3000 );")
         noscript
