--- a/client/src/templates/flight_instruments.pug
+++ b/client/src/templates/flight_instruments.pug
@@ -1,5 +1,5 @@
 style.
-    #flight_controls {
+    #flight_instruments {
         width: 100%;
         height: 100%;
         position: absolute;
@@ -36,6 +36,6 @@ style.
         left: inherit !important;
         right: 6vw;
     }
-#flight_controls
+#flight_instruments
     .control
-        include ../assets/flight_controls/Airspeed.svg
+        include ../assets/flight_instruments/Airspeed.svg
