#35 - Fixing touch control rotation position, adding activate and deactivate calls

--- a/client/src/templates/flight_instruments.pug
+++ b/client/src/templates/flight_instruments.pug
@@ -33,7 +33,7 @@ style.
 
     .rotation-pad {
         z-index: 2;
-        left: inherit !important;
+        left: calc(100% - 115px) !important;
         right: 6vw;
     }
 #flight_instruments
