--- a/client/src/templates/head_common.pug
+++ b/client/src/templates/head_common.pug
@@ -7,9 +7,6 @@ link(rel='mask-icon' href='/assets/favicon/safari-pinned-tab.svg' color='#5bbad5
 meta(name='msapplication-TileColor' content='#da532c')
 meta(name='theme-color' content='#000000')
 
-//- CSS
-link(href='./vendor/TouchControls-master/css/touch-pad.css' rel='stylesheet')
-
 //- Captcha
 script(src="https://www.google.com/recaptcha/api.js")
 
@@ -27,3 +24,68 @@ meta(name='twitter:title' content=title)
 meta(name='twitter:card' content='summary_large_image')
 meta(name='twitter:description' content=description || title)
 meta(name='twitter:image' content=cover || 'https://langenium.com/assets/images/virtual_office.jpg')
+
+style.
+    .rotation-pad {
+        position: absolute;
+    }
+
+    .rotation-pad .region {
+        position: absolute;
+        width: 100px;
+        height: 100px;
+        background: radial-gradient(rgba(218, 225, 230, 0.25) 5%, rgba(218, 225, 230, 0.50) 95%),
+                    url("./assets/images/touchpad/cam.png") center center no-repeat;
+        border: 2px solid rgba(218, 225, 230, 0.25);
+        border-radius: 90px;
+        box-shadow: 0px 0px 5px rgba(194, 200, 204, 0.55);
+        user-select: none;
+    }
+
+    .rotation-pad .handle {
+        opacity: 0.1;
+        position: absolute;
+        height: 30px;
+        width: 30px;
+        top: 0px;
+        left: 0px;
+        background: radial-gradient(rgba(215, 225, 255, 0.70) 0%, rgba(215, 225, 255, 0.50) 100%);
+        /*border: 1px solid rgba(145, 105, 245, 0.90);*/
+        border-radius: 50%;
+        box-shadow: 0px 0px 7px rgba(195, 205, 245, 0.9);
+        text-align: center;
+        font: 24px/44px "Courier New", Courier, monospace;
+        user-select: none;
+    }
+
+    .movement-pad {
+        position: absolute;
+    }
+
+    .movement-pad .region {
+        position: absolute;
+        width: 100px;
+        height: 100px;
+        background: radial-gradient(rgba(218, 225, 230, 0.25) 5%, rgba(218, 225, 230, 0.50) 95%),
+                    url("./assets/images/touchpad/nav.png") center center no-repeat;
+        border: 2px solid rgba(218, 225, 230, 0.25);
+        border-radius: 90px;
+        box-shadow: 0px 0px 5px rgba(194, 200, 204, 0.55);
+        user-select: none;
+    }
+
+    .movement-pad .handle {
+        opacity: 0.1;
+        position: absolute;
+        height: 30px;
+        width: 30px;
+        top: 0px;
+        left: 0px;
+        background: radial-gradient(rgba(215, 225, 255, 0.70) 0%, rgba(215, 225, 255, 0.50) 100%);
+        /*border: 1px solid rgba(145, 105, 245, 0.90);*/
+        border-radius: 50%;
+        box-shadow: 0px 0px 7px rgba(195, 205, 245, 0.9);
+        text-align: center;
+        font: 24px/44px "Courier New", Courier, monospace;
+        user-select: none;
+    }
