#35 - Adding elevator lift slider stick

--- a/client/src/templates/flight_instruments.pug
+++ b/client/src/templates/flight_instruments.pug
@@ -34,7 +34,11 @@ style.
     .rotation-pad {
         z-index: 2;
         left: calc(100% - 115px) !important;
-        right: 6vw;
+    }
+
+    .slider-stick {
+        z-index: 2;
+        left: calc(100% - 105px) !important;
     }
 #flight_instruments
     .control
