--- a/client/src/templates/head_common.pug
+++ b/client/src/templates/head_common.pug
@@ -89,3 +89,37 @@ style.
         font: 24px/44px "Courier New", Courier, monospace;
         user-select: none;
     }
+
+    .slider-stick {
+        position: absolute;
+    }
+
+    .slider-stick .region {
+        position: absolute;
+        width: 80px;
+        height: 200px;
+        background: radial-gradient(rgba(218, 225, 230, 0.25) 5%, rgba(218, 225, 230, 0.50) 95%),
+                    url("./assets/images/touchpad/lift.png") center center no-repeat;
+        background-size: contain;
+        border: 2px solid rgba(218, 225, 230, 0.25);
+        border-radius: 90px;
+        box-shadow: 0px 0px 5px rgba(194, 200, 204, 0.55);
+        user-select: none;
+    }
+
+    .slider-stick .handle {
+        opacity: 0.1;
+        position: absolute;
+        height: 30px;
+        width: 30px;
+        top: 0px;
+        left: 0px;
+        background: radial-gradient(rgba(215, 225, 255, 0.70) 0%, rgba(215, 225, 255, 0.50) 100%);
+        /*border: 1px solid rgba(145, 105, 245, 0.90);*/
+        border-radius: 50%;
+        box-shadow: 0px 0px 7px rgba(195, 205, 245, 0.9);
+        text-align: center;
+        font: 24px/44px "Courier New", Courier, monospace;
+        user-select: none;
+    }
+
