#39 - Restoring support for OrbitControls and tweaks to ship trail effect

--- a/client/src/templates/flight_instruments.pug
+++ b/client/src/templates/flight_instruments.pug
@@ -9,6 +9,7 @@ style.
         display: flex;
         justify-content: center;
         align-items: flex-end;
+        pointer-events: none;
     }
     .control {
         display: none;
