--- a/client/src/templates/game_client.pug
+++ b/client/src/templates/game_client.pug
@@ -66,6 +66,17 @@ html(lang='en')
                 z-index: 1;
             }
 
+            #preview_materials {
+                display: none;
+                background: rgba(0,0,0,0.8);
+                position: absolute;
+                width: 100%;
+                height: 25%;
+                overflow-y: auto;
+                z-index: 2;
+                bottom: 0;
+            }
+
     body(onload="_init( 3000 );")
         noscript
             style.
@@ -83,6 +94,8 @@ html(lang='en')
                 img(src='/assets/images/tail-spin.svg' alt='Loading spinner')
             include ../templates/door_image.pug
             include ../templates/flight_instruments.pug
+            div#preview_materials
+                div(style='color:#FFF; margin: 1rem;') Previewing Procedural Materials
             #webgl
             // Shaders
             script(type='x-shader/x-vertex', id='gradientGLSL')
