#39 - Adding WIP procedural building shader

--- a/client/src/templates/game_client.pug
+++ b/client/src/templates/game_client.pug
@@ -110,6 +110,10 @@ html(lang='en')
                 include ../shaders/cloud.vert
             script(type='x-shader/x-fragment', id='cloudFragShader')
                 include ../shaders/cloud.frag
+            script(type='x-shader/x-vertex', id='proceduralBuildingVertShader')
+                include ../shaders/proceduralBuilding.vert
+            script(type='x-shader/x-fragment', id='proceduralBuildingFragShader')
+                include ../shaders/proceduralBuilding.frag
             script(type='x-shader/x-vertex', id='proceduralMetalVertShader')
                 include ../shaders/proceduralMetal.vert
             script(type='x-shader/x-fragment', id='proceduralMetalFragShader')
