#39 - Adding procedural solar panel material, flight tweaks, building shader progress

--- a/client/src/templates/game_client.pug
+++ b/client/src/templates/game_client.pug
@@ -122,6 +122,10 @@ html(lang='en')
                 include ../shaders/proceduralMetal2.vert
             script(type='x-shader/x-fragment', id='proceduralMetal2FragShader')
                 include ../shaders/proceduralMetal2.frag
+            script(type='x-shader/x-vertex', id='proceduralSolarPanelVertShader')
+                include ../shaders/proceduralSolarPanel.vert
+            script(type='x-shader/x-fragment', id='proceduralSolarPanelFragShader')
+                include ../shaders/proceduralSolarPanel.frag
             script#vertexshader(type='x-shader/x-vertex').
                 varying vec2 vUv;
                 void main() {
