#39 - Renamed Cloud to Sky shader - Added 5 stop gradient function to common GLSL include - Progress on procedural building shader

--- a/client/src/templates/game_client.pug
+++ b/client/src/templates/game_client.pug
@@ -106,10 +106,10 @@ html(lang='en')
                 include ../shaders/common/normal.glsl
             script(type='x-shader/x-fragment', id='voronoiGLSL')
                 include ../shaders/common/voronoi.glsl
-            script(type='x-shader/x-vertex', id='cloudVertShader')
-                include ../shaders/cloud.vert
-            script(type='x-shader/x-fragment', id='cloudFragShader')
-                include ../shaders/cloud.frag
+            script(type='x-shader/x-vertex', id='skyVertShader')
+                include ../shaders/sky.vert
+            script(type='x-shader/x-fragment', id='skyFragShader')
+                include ../shaders/sky.frag
             script(type='x-shader/x-vertex', id='proceduralBuildingVertShader')
                 include ../shaders/proceduralBuilding.vert
             script(type='x-shader/x-fragment', id='proceduralBuildingFragShader')
