#32 - Refactoring main script file, created additional helpers

--- a/client/src/templates/game_client.pug
+++ b/client/src/templates/game_client.pug
@@ -114,11 +114,11 @@ html(lang='en')
 
             #object_editor {
                 bottom: 8px;
-                right: 8px;
+                left: 8px;
             }
             #scene_overview {
                 top: 8px;
-                right: 8px;
+                left: 8px;
             }
 
     body(onload="_init( 3000 );")
