#32 - Adding proof of concept scene overview functonality

--- a/client/src/templates/partials/ui/flight_instruments.pug
+++ b/client/src/templates/partials/ui/flight_instruments.pug
@@ -43,4 +43,4 @@ style.
     }
 #flight_instruments
     .control
-        include ../assets/flight_instruments/Airspeed.svg
+        include ../../../assets/flight_instruments/Airspeed.svg
