#32 - Adding mesh names, updating overview when office room removed and basic switching of orbit controls target

--- a/client/src/templates/partials/ui/menus/scene_overview-row.pug
+++ b/client/src/templates/partials/ui/menus/scene_overview-row.pug
@@ -3,6 +3,6 @@ tr(class='tp-lblv_l')
     td $name
     td $type
     td 
-        button(class='tp-btnv_b' onclick='console.log("View $id");') View
+        button(class='tp-btnv_b' onclick='l.scenograph.controls.set_target($id)') View
     td 
         button(class='tp-btnv_b' onclick='console.log("Edit $id");') Edit
