#32 Turning off client minify during development, setting locked target distance dynamically

--- a/client/src/templates/partials/ui/targeting_scanner/target.pug
+++ b/client/src/templates/partials/ui/targeting_scanner/target.pug
@@ -1,5 +1,5 @@
-div
-    img.icon(style="display: block; filter: hue-rotate(73deg) brightness(4.0);" width="auto" height="50%" src="//bastion:8081/assets/ui/pirate-icon.png")
-    .name Bot Ship
+.target(data-uuid="$uuid")
+    img.icon(style="display: block; filter: hue-rotate(73deg) brightness(4.0);" width="auto" height="50%" src="$url")
+    .name $name
     .health_bar
     .distance
