--- a/client/src/templates/partials/ui/targeting_scanner/target.pug
+++ b/client/src/templates/partials/ui/targeting_scanner/target.pug
@@ -1,5 +1,5 @@
 .target(data-uuid="$uuid")
-    img.icon(style="display: block; filter: hue-rotate(73deg) brightness(4.0);" width="auto" height="50%" src="$url")
+    img.icon(src="$url" class='$icon_class')
     .name $name
     .health_bar
     .distance
