--- a/client/src/templates/partials/ui/targeting_scanner.pug
+++ b/client/src/templates/partials/ui/targeting_scanner.pug
@@ -1,6 +1,7 @@
 style.
     #ui-targeting-container {
         display: flex;
+        justify-content: center;
         position: absolute;
         bottom: 1vh;
         left: 20vw;
@@ -12,18 +13,35 @@ style.
     }
 
     .target {
+        border: solid 1px rgba(0,0,0,0.125);
         color: rgba(0,0,0,0.5);
         font-family: monospace;
         margin: 0.25rem;
+        padding: 0.25rem;
+        width: 8vw;
+        pointer-events: auto;
+    }
+
+    .target:hover {
+        border: solid 1px rgba(0,0,0,0.5);
+        color: #000;
+        cursor: pointer;
     }
 
     .target .icon {
         width: auto;
-        height: 50%;
+        height: 60%;
     }
 
     .target .icon.neutral {
         display: block;
         filter: hue-rotate(73deg) brightness(4.0);
+    }
+
+    .target .health_bar {
+        margin: -.25rem;
+        background: #00FF00;
+        width: calc(100% + 0.5rem);
+        height: 5px;
     }
 #ui-targeting-container
