--- a/client/src/templates/partials/ui/targeting_list.pug
+++ b/client/src/templates/partials/ui/targeting_list.pug
@@ -1,50 +1,53 @@
-style.
+:stylus(wrap=true)
     #ui-targeting-list {
         display: flex;
         position: absolute;
         top: 1vh;
         left: 1vw;
-        width: 20vw;
-        height: 5vh;
+        width: 40vw;
         border-radius: 1% / 5%;
         z-index: 2;
         pointer-events: none;
-    }
 
-    .target {
-        border: solid 1px rgba(0,0,0,0.125);
-        color: rgba(0,0,0,0.5);
-        font-family: monospace;
-        margin: 0.25rem;
-        padding: 0.25rem;
-        width: 8vw;
-        pointer-events: auto;
-    }
+        .target {
+            border: solid 1px rgba(0,0,0,0.0);
+            color: rgba(0,0,0,0.5);
+            display: flex;
+            font-family: monospace;
+            margin: 0.25rem;
+            padding: 0.25rem;
+            width: 8vw;
+            pointer-events: auto;
 
-    .target:hover {
-        border: solid 1px rgba(0,0,0,0.5);
-        color: #000;
-        cursor: pointer;
-    }
+            &:hover {
+                border: solid 1px rgba(0,0,0,0.5);
+                color: #000;
+                cursor: pointer;
+            }
 
-    .target .icon {
-        width: auto;
-        height: 60%;
-    }
+            .icon {
+                width: 32px;
+                height: auto;
+                margin-right: 8px;
 
-    .target .icon.neutral {
-        display: block;
-        filter: hue-rotate(73deg) brightness(4.0);
-    }
+                &.neutral {
+                    display: block;a
+                    filter: hue-rotate(73deg) brightness(4.0);
+                }
+            }
 
-    .target .health_bar {
-        margin: -.25rem;
-        background: #00FF00;
-        width: calc(100% + 0.5rem);
-        height: 5px;
+            .health_bar {
+                margin: -.25rem;
+                background: #00FF00;
+                width: calc(100% + 0.5rem);
+                height: 5px;
+            }
+        }
+        
     }
 #ui-targeting-list
     .target(data-uuid="123")
         img.icon(src="/assets/ui/pirate-icon.png" class='$icon_class')
-        .name Bot Ship 
-        .distance 3km
+        .info
+            .name Bot Ship 
+            .distance 3km
