#32 - Adding targeting list styles and static markup

--- a/client/src/templates/partials/ui/targeting/list_target.pug
+++ b/client/src/templates/partials/ui/targeting/list_target.pug
@@ -1,4 +1,6 @@
-.target(data-uuid="$uuid")
-    img.icon(src="$url" class='$icon_class')
-    .name $name
-    .distance
+tr
+    td Bertrum
+    td Pirate Aircraft
+    td 100km
+    td
+        button +
