--- a/client/src/styles/game_client.styl
+++ b/client/src/styles/game_client.styl
@@ -1,123 +1,6 @@
-html, body {margin: 0; height: 100%; overflow: hidden}
-
-#page-wrapper {
-    position: relative;
-    z-index: 0;
-}
-#webgl-wrapper {
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
-#loader_symbols {
-    display: block;
-    position:absolute;
-    top:0;
-    left:0;
-    z-index: 2;
-}
-h1#loadingSign {
-    color: #dedede;
-    display: flex;
-    position: absolute;
-    z-index: 2;
-    bottom: 1rem;
-    right: 2rem;
-}
-h1#loadingSign div {
-    display: inline-block;
-    font-family: monospace;
-    font-size: 2.5rem;
-    padding: 1rem 2.5rem 1rem 0;
-}
-h1#loadingSign img {
-    height: 5rem;
-    width: 5rem;
-}
-
-body {
-    background-color: #000;
-    margin: 0;
-    padding: 0;
-}
-#webgl {
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-}
-.tp-dfwv {
-    z-index: 1;
-}
-
-#preview_materials {
-    display: none;
-    background: rgba(0,0,0,0.8);
-    position: absolute;
-    width: 100%;
-    height: 25%;
-    overflow-y: auto;
-    z-index: 2;
-    bottom: 0;
-}
-
-#ui_overlay {
-    position: absolute;
-    z-index: 3;
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    pointer-events: none;
-    align-items: center;
-    justify-content: center;
-}
-
-#ui_overlay > div {
-    pointer-events: all;
-}
-
-#ui_overlay #main_menu .tp-rotv {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-}
-
-#ui_overlay #main_menu .tp-rotv-expanded {
-    position: relative;
-    font-size: 20px;
-    --cnt-hp: var(--tp-container-horizontal-padding, 10px);
-    --cnt-vp: var(--tp-container-vertical-padding, 10px);
-    --cnt-usp: var(--tp-container-unit-spacing, 10px);
-    --cnt-usz: var(--tp-container-unit-size, 40px);
-}
-
-#debugging_tools,
-#object_editor,
-#scene_overview {
-    position: absolute;
-}
-
-#debugging_tools {
-    bottom: 8px;
-    right: 8px;
-}
-
-#object_editor {
-    bottom: 8px;
-    left: 8px;
-}
-#scene_overview {
-    top: 8px;
-    left: 8px;
-    display: none;
-}
-
-#templates {
-    display: none;
-}
+@import "base/core.styl";
+@import "ui/common.styl";
+@import "ui/debugging_tools.styl";
+@import "ui/object_editor.styl";
+@import "ui/overlay.styl";
+@import "ui/scene_overview.styl";
