--- a/client/src/templates/partials/ui/targeting_list.pug
+++ b/client/src/templates/partials/ui/targeting_list.pug
@@ -1,13 +1,10 @@
 :stylus(wrap=true)
-    #ui-targeting-list {
+    .modal {
         position: absolute;
-        top: 1vh;
-        left: 1vw;
         z-index: 4;
         font-family: monospace;
         text-shadow: 1px 1px grey;
         background: rgba(0,0,0,0.25);
-        padding: 0.5rem 1rem;
         resize: both;
         overflow: auto;
         color: #CCC;
@@ -16,26 +13,91 @@
         border: solid 1px rgba(0,0,0,0.25);
 
         .header {
+            background: rgba(0,0,0,0.25);
             display: flex;
+            justify-content: space-between;
             padding: .5rem 0;
             img {
-                margin: 0 1rem 0 0.5rem;
+                margin: 0 .5rem 0 0.75rem;
+                filter: invert(1);
+            }
+            strong {
+                margin: 0 1rem;
+            }
+        }
+
+        .header:hover {
+            background: rgba(0,0,0,0.5);
+            cursor: pointer;
+        }
+
+        table {
+            margin: 0.5rem;
+            width: calc(100% - 1rem);
+            transition: all 0.4s ease-in-out;
+
+            thead {
+                background: rgba(0,0,0,0.25);
+                color: #FFFFFF;
+            }
+
+            &, td {
+                border: 1px solid rgba(0,0,0,0.25);
+                border-collapse: collapse;
             }
             
+
+            td {
+                padding: 0.125rem 0.5rem;
+            }
         }
+
+        table,
+        .modal_controls {
+            display: none;
+        }
+
+        &.expanded {
+
+            .header:hover {
+                background: rgba(0,0,0,0.25);
+                cursor: default;
+            }
+
+            table {
+                display: table;
+            }
+            .modal_controls {
+                display: block;
+            }
+        }
+
+        
+
+        
+
+    }
+    #ui-targeting-list {
+        top: 1vh;
+        left: 1vw;
 
         button {
             background: rgba(1,1,1,0.1);
             border-radius: 16px;
             padding: 0.125rem 0.25rem 0;
             pointer-events: auto;
+            color: #FFF;
         }
-        
     }
-#ui-targeting-list
+#ui-targeting-list.modal.expanded
     .header
         img(src='/assets/ui/satellite-dish-solid.svg' width='16' height='16')
         strong Sensors
+        .modal_controls
+            a(href='#')
+                img(src='/assets/ui/window-minimize-solid.svg' width='13' height='13')
+            a(href='#')
+                img(src='/assets/ui/up-down-left-right-solid.svg' width='13' height='13')
     table
         thead
             tr
