#32 - Building targeting list dynamically based on targetable scene objects

--- a/client/src/templates/partials/ui/targeting/list_target.pug
+++ b/client/src/templates/partials/ui/targeting/list_target.pug
@@ -1,6 +1,8 @@
-tr
-    td Bertrum
-    td Pirate Aircraft
-    td 100km
+tr(data-uuid="$uuid")
+    td
+        img.icon(src="$url" class='$icon_class' width="13" height="13")
+    td $name
+    td $type
+    td.distance
     td
         button +
