#32 - Adding remove and info buttons to the active targets - Adding HTML for a active target window

--- a/client/src/templates/partials/ui/targeting/locked_target.pug
+++ b/client/src/templates/partials/ui/targeting/locked_target.pug
@@ -1,5 +1,7 @@
 .target(data-uuid="$uuid")
     .health_bar
+    button.view i
+    button.close X
     img.icon(src="$url" class='$icon_class')
     .name $name
     .distance
